--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -17,11 +17,11 @@ services:
 #    depends_on:
 #      - dbserver
     ports:
-      - "8081:8081"
+      - "8080:8080"
     volumes:
       - .:/app
     environment:
-      JAR_TARGET: demo-0.0.1-SNAPSHOT.jar
+      JAR_TARGET: gs-gateway-0.1.0.jar
 #  myadmin:
 #    image: phpmyadmin/phpmyadmin
 #    depends_on:
